--- a/index.qmd
+++ b/index.qmd
@@ -16,8 +16,8 @@ library(googlesheets4)
 library(gt)
 library(tidyverse)
 gs4_deauth()
-d <- read_sheet("https://docs.google.com/spreadsheets/d/1n2QUWu0zg8yBHvun0SdXrSfbhQq11ww79vICqW4mmrE/edit?usp=sharing", sheet = "199")
-prepare_cutoff_date <- as.Date("2025-5-1")
+d <- read_sheet("https://docs.google.com/spreadsheets/d/1B8CJi-NkiYoOgtpIqvlpZpuvb9ETSE1i2RVYf_aeiu0/edit?usp=sharing")
+prepare_cutoff_date <- as.Date("2026-5-1")
 ```
 
 ```{r}
@@ -86,21 +86,22 @@ d |>
     ),
     locations = cells_body(
       columns = everything(),
-      rows = str_detect(topic, "[Ll]ab|Milestone|Review") 
+      rows = !is.na(week) 
       # puts black line above rows where certain keywords are detected in certain columns
     )
   ) |>
   fmt_markdown(
     columns = c(topic, prepare, materials, due)
   ) |>
-  tab_options(table.width = pct(90)) |>
+  tab_options(table.width = pct(80),
+              table.align = 'left') |>
   cols_width(
     week ~ pct(2),
-    date ~ pct(10), 
-    prepare ~ pct(25),
-    topic ~ pct(20),
-    materials ~ pct(18),
-    due ~ pct(15)
+    date ~ pct(9), 
+    prepare ~ pct(20),
+    topic ~ pct(22),
+    materials ~ pct(15),
+    due ~ pct(12)
   ) |>
   cols_label_with(fn = function(x) {
       janitor::make_clean_names(x, case = "title") |>
