--- a/syllabus/ta/fernandez.qmd
+++ b/syllabus/ta/fernandez.qmd
@@ -1,5 +1,9 @@
 ---
-title: "fernandez"
-format: html
+title: Fernandez, Sara
+categories: 
+  - ???
+description: "???"
+subtitle: "[🔗](https://www.nytimes.com)"
+image: headshots/fernandez.jpg
+image-alt: Headshot of TA
 ---
-
