--- a/syllabus/ta/zhang_lisa.qmd
+++ b/syllabus/ta/zhang_lisa.qmd
@@ -1,9 +1,9 @@
 ---
 title: Zhang, Lisa
 categories: 
-  - Lab Helper
-description: "M 1:25PM - 2:40PM (Sec 6)"
-subtitle: "[🔗](https://docs.google.com/spreadsheets/d/1Bft17R-KHqjK3LlK8aRUEQCGmtnFaH0BgVX830SysOE/edit?usp=sharing)"
+  - ???
+description: "???"
+subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/lisa.png
 image-alt: Headshot of TA
 ---
