--- a/syllabus/ta/harris.qmd
+++ b/syllabus/ta/harris.qmd
@@ -1,9 +1,9 @@
 ---
 title: Harris, Natasha
 categories: 
-  - Lab Helper
-description: "M 4:40PM - 5:55PM (Sec 10)"
-subtitle: "[🔗](https://docs.google.com/spreadsheets/d/1Bft17R-KHqjK3LlK8aRUEQCGmtnFaH0BgVX830SysOE/edit?usp=sharing)"
+  - ???
+description: "???"
+subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/harris.jpeg
 image-alt: Headshot of TA
 ---
