--- a/syllabus/ta/norton.qmd
+++ b/syllabus/ta/norton.qmd
@@ -1,5 +1,9 @@
 ---
-title: "norton"
-format: html
+title: Norton, Tory
+categories: 
+  - ???
+description: "???"
+subtitle: "[🔗](https://www.nytimes.com)"
+image: headshots/norton.jpg
+image-alt: Headshot of TA
 ---
-
