--- a/syllabus/ta/pham.qmd
+++ b/syllabus/ta/pham.qmd
@@ -1,5 +1,9 @@
 ---
-title: "pham"
-format: html
+title: Patrick, Pham
+categories: 
+  - ???
+description: "???"
+subtitle: "[🔗](https://www.nytimes.com)"
+image: headshots/pham.jpg
+image-alt: Headshot of TA
 ---
-
