update list of meetings

--- a/syllabus/syllabus-overview.qmd
+++ b/syllabus/syllabus-overview.qmd
@@ -13,37 +13,37 @@ Learn to explore, visualize, and analyze data to understand natural phenomena, i
 +---------+--------------------------------+----------------------------+-----------+
 | Meeting | Location                       | Time                       | Staff     |
 +=========+================================+============================+===========+
-| Lecture | Biological Sciences 111        | Tu Thu 11:45 AM - 01:00 PM | John Z\   |
-|         |                                |                            | Sonya\    |
+| Lecture | Bryan Center Griffith Theater  | MoWe 11:45 AM - 01:00 PM   | John Z\   |
+|         |                                |                            | TBD  \    |
 |         |                                |                            | TBD       |
 +---------+--------------------------------+----------------------------+-----------+
-| Lab 01  | Perkins LINK 087 (Classroom 3) | M 08:30 AM - 09:45 AM      | Caitrin\  |
-|         |                                |                            | Han       |
+| Lab 01  | Perkins LINK 087 (Classroom 3) | Th 08:30 AM - 09:45 AM     | TBD\      |
+|         |                                |                            | TBD       |
 +---------+--------------------------------+----------------------------+-----------+
-| Lab 02  | Perkins LINK 087 (Classroom 3) | M 10:05 AM - 11:20 AM      | Katie\    |
-|         |                                |                            | Hyunjin   |
+| Lab 02  | Perkins LINK 087 (Classroom 3) | Th 10:05 AM - 11:20 AM     | TBD\      |
+|         |                                |                            | TBD       |
 +---------+--------------------------------+----------------------------+-----------+
-| Lab 03  | Perkins LINK 071 (Classroom 5) | M 10:05 AM - 11:20 AM      | Jasmine\  |
-|         |                                |                            | Liane     |
+| Lab 03  | Perkins LINK 071 (Classroom 5) | Th 10:05 AM - 11:20 AM     | TBD\      |
+|         |                                |                            | TBD       |
 +---------+--------------------------------+----------------------------+-----------+
-| Lab 04  | Perkins LINK 087 (Classroom 3) | M 11:45 AM - 01:00 PM      | Avery\    |
-|         |                                |                            | Alexa     |
+| Lab 04  | Perkins LINK 087 (Classroom 3) | Th 11:45 AM - 01:00 PM     | TBD\      |
+|         |                                |                            | TBD       |
 +---------+--------------------------------+----------------------------+-----------+
-| Lab 05  | Perkins LINK 071 (Classroom 5) | M 11:45 AM - 01:00 PM      | Dom\      |
-|         |                                |                            | Julia     |
+| Lab 05  | Perkins LINK 071 (Classroom 5) | Th 11:45 AM - 01:00 PM     | TBD\      |
+|         |                                |                            | TBD       |
 +---------+--------------------------------+----------------------------+-----------+
-| Lab 06  | Perkins LINK 087 (Classroom 3) | M 01:25 PM - 02:40 PM      | Dav\      |
-|         |                                |                            | Lisa      |
+| Lab 06  | Perkins LINK 087 (Classroom 3) | Th 01:25 PM - 02:40 PM     | TBD\      |
+|         |                                |                            | TBD       |
 +---------+--------------------------------+----------------------------+-----------+
-| Lab 07  | Perkins LINK 071 (Classroom 5) | M 01:25 PM - 02:40 PM      | Eduardo\  |
-|         |                                |                            | Arijit    |
+| Lab 07  | Perkins LINK 071 (Classroom 5) | Th 01:25 PM - 02:40 PM     | TBD\      |
+|         |                                |                            | TBD       |
 +---------+--------------------------------+----------------------------+-----------+
-| Lab 08  | Perkins LINK 087 (Classroom 3) | M 03:05 PM - 04:20 PM      | Federico\ |
-|         |                                |                            | Sarah     |
+| Lab 08  | Perkins LINK 087 (Classroom 3) | Th 03:05 PM - 04:20 PM     | TBD\      |
+|         |                                |                            | TBD       |
 +---------+--------------------------------+----------------------------+-----------+
-| Lab 09  | Perkins LINK 071 (Classroom 5) | M 03:05 PM - 04:20 PM      | Li\       |
-|         |                                |                            | Devarpita |
+| Lab 09  | Perkins LINK 071 (Classroom 5) | Th 03:05 PM - 04:20 PM     | TBD\      |
+|         |                                |                            | TBD       |
 +---------+--------------------------------+----------------------------+-----------+
-| Lab 10  | Perkins LINK 087 (Classroom 3) | M 04:40 PM - 05:55 PM      | Netra\    |
-|         |                                |                            | Natasha   |
+| Lab 10  | Perkins LINK 071 (Classroom 5) | Th 04:40 PM - 05:55 PM     | TBD\      |
+|         |                                |                            | TBD       |
 +---------+--------------------------------+----------------------------+-----------+
