--- a/lab/lab-0.qmd
+++ b/lab/lab-0.qmd
@@ -1,7 +1,5 @@
 ---
 title: "Lab 0"
-subtitle: "Hello, World and STA 199!"
-description: "End of lab on Wednesday January 8"
 categories: "Lab"
 execute:
   eval: false
@@ -28,9 +26,9 @@ We've all been there, but it's time to kick the habit.
 Instead of asking you to download any new programs onto your computer, we host everything pre-packaged for you in the cloud. You just have to login through your web browser, and you're ready to go:
 
 -   Go to <https://cmgr.oit.duke.edu/containers> and login with your Duke NetID and Password.
--   Click `STA198-199` to log into the Docker container. You should now see the RStudio environment.
+-   Click `STA199` to log into the Docker container. You should now see the RStudio environment.
 
-Go to <https://cmgr.oit.duke.edu/containers> and under *Reservations available* click on *reserve STA 198-199* to reserve a container for yourself.
+Go to <https://cmgr.oit.duke.edu/containers> and under *Reservations available* click on *reserve STA199* to reserve a container for yourself.
 
 ::: callout-note
 A container is a self-contained instance of RStudio for you, and you alone. You will do all of your computing in your container.
@@ -43,7 +41,7 @@ To launch your container click on it under My reservations, then click *Login*, 
 [^1]: Yes, it's too many steps. I don't know why! But it works, and you'll get used to it. Trust me, it beats downloading and installing everything you need on your computers!
 
 ::: callout-warning
-Please double and triple check that you have reserved the `STA 198-199` container and not some other. The various containers differ in the software they include, so if you reserve something else, you may be missing something we need.
+Please double and triple check that you have reserved the `STA199` container and not some other. The various containers differ in the software they include, so if you reserve something else, you may be missing something we need.
 :::
 
 ## 2. Create a GitHub account
@@ -70,7 +68,14 @@ You will authenticate GitHub using SSH (Secure Shell Protocol – it doesn't rea
 You only need to do this authentication process one time on a single system.
 :::
 
--   Go back to your RStudio container and type `credentials::ssh_setup_github()` into your console.
+-   Go back to your RStudio container, copy this command into the console, and hit enter:
+
+```{r}
+#| eval: false
+
+credentials::ssh_setup_github()
+```
+
 -   R will ask "No SSH key found. Generate one now?" You should click 1 for yes.
 -   You will generate a key. R will then ask "Would you like to open a browser now?" You should click 1 for yes.
 -   You may be asked to provide your GitHub username and password to log into GitHub. After entering this information, you should paste the key in and give it a name. You might name it in a way that indicates where the key will be used, e.g., `sta199`).
@@ -105,7 +110,7 @@ usethis::use_git_config(
 )
 ```
 
-I used my gmail because that is the one I used to create my GitHub account. You should also be using the email address you used to create your GitHub account, it's ok if it isn't your Duke email.
+I used my gmail because that is the one I used to create my GitHub account. **You must use the exact same email address that you used to create your GitHub account.**
 
 ::: {.callout-important collapse="true"}
 ## How do I know if I did it right?
@@ -125,21 +130,36 @@ The following video walks you through the steps outlined in the SSH key generati
 
 A GitHub repository (repo) is a collection of files hosted on GitHub. Repos are the main way we will distribute files to you during the semester. When you copy the files in a repo to your local computing environment (your container, in this case), that's called "cloning". So, let's clone our first repo: 
 
--   Go to the course organization at [github.com/sta199-s25](https://github.com/sta199-s25) organization on GitHub. Click on the repo **hello-world**.
+-   Go to the repository for **lab-0** in the course GitHub organization: <https://github.com/sta199-s26/lab-0>.
 
--   Click on the green **CODE** button, select **Use SSH** (this might already be selected by default, and if it is, you'll see the text **Clone with SSH**). Click on the clipboard icon to copy the repo URL.
+-   Click on the green **CODE** button, select **Use SSH** (this might already be selected by default, and if it is, you'll see the text **Clone with SSH**).
+    Click on the clipboard icon to copy the repo URL.
+
+    ![](images/lab-0/lab-0-repo.png){fig-alt="Clone with SSH button in GitHub repository page." width="600" fig-align="center"}
 
 -   In RStudio, go to *File* ➛ *New Project* ➛*Version Control* ➛ *Git*.
 
 -   Copy and paste the URL of your assignment repo into the dialog box *Repository URL*. Again, please make sure to have *SSH* highlighted under *Clone* when you copy the address.
 
--   Click *Create Project*, and the files from your GitHub repo will be displayed in the *Files* pane in RStudio.
+-   Click *Create Project*.
+
+    ![](images/lab-0/lab-0-clone.png){fig-alt="Cloning a GitHub repository in RStudio." width="600" fig-align="center"}
+
+-   Since this is the first time you are connecting to GitHub from this RStudio instance, you will be asked to confirm the authenticity of the host.
+    This will happen in a pop-up window like the one below.
+    Type **yes** in the box and hit *Enter*.
+
+    ![](images/lab-0/authenticity-of-host.png){fig-alt="Authenticity of host pop-up window asking to confirm the authenticity of the host. Type 'yes' in the box and hit Enter." width="400" fig-align="center"}
+
+-   RStudio will now clone the repo and create a new RStudio project for you.
+    This might take a few seconds.
+    Once done, the files from your GitHub repo will be displayed in the *Files* pane in RStudio.
 
 You will need to get used to these steps, because you'll probably clone at least one new repo every week.
 
 ## 6. Hello STA 199!
 
-Fill out the course "Getting to know you" survey on Canvas: <https://canvas.duke.edu/courses/50057/quizzes/30406>.
+Fill out the course "Getting to know you" survey on Canvas: ADD LINK LATER.
 
 We will use the information collected in this survey for a variety of goals, from inviting you to the course GitHub organization (more on that later) to getting to know you as a person and your course goals and concerns.
 
