--- a/syllabus/syllabus-team.qmd
+++ b/syllabus/syllabus-team.qmd
@@ -22,7 +22,7 @@ listing:
 
 John Zito is Assistant Research Professor of Statistical Science at Duke University. He came to Duke in August 2024 after completing his PhD in statistics at Rice University. Prior to that he received a BA in mathematics from Kenyon College and spent a few years working in the Federal Reserve system.
 
-**Office Hours**: ???
+**Office Hours**: Wednesday 3pm - 5pm *or by appointment* in Old Chem 207.
 
 ## Teaching assistants {#teaching-assistants}
 
