assign roles and ad last headshot

--- a/syllabus/ta/bolik.qmd
+++ b/syllabus/ta/bolik.qmd
@@ -1,7 +1,7 @@
 ---
 title: Bolik, Jannis
 categories: 
-  - ???
+  - Lab leader
 description: "???"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/bolik.jpg
