--- a/syllabus/ta/ma.qmd
+++ b/syllabus/ta/ma.qmd
@@ -1,7 +1,7 @@
 ---
 title: Ma, Liane
 categories: 
-  - ???
+  - Lab helper
 description: "???"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/liane.png
