--- a/syllabus/ta/akinola.qmd
+++ b/syllabus/ta/akinola.qmd
@@ -1,7 +1,7 @@
 ---
 title: Akinola, Bethany
 categories: 
-  - ???
+  - Lab helper
 description: "???"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/bethany.png
