--- a/syllabus/ta/elmore.qmd
+++ b/syllabus/ta/elmore.qmd
@@ -1,7 +1,7 @@
 ---
 title: Elmore, Cael
 categories: 
-  - ???
+  - Lab leader
 description: "???"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/elmore.jpeg
