--- a/syllabus/ta/nguyen.qmd
+++ b/syllabus/ta/nguyen.qmd
@@ -1,7 +1,7 @@
 ---
 title: Nguyen, Chelsea
 categories: 
-  - ???
+  - Lab helper
 description: "???"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/nguyen.jpeg
