--- a/syllabus/ta/niu.qmd
+++ b/syllabus/ta/niu.qmd
@@ -1,7 +1,7 @@
 ---
 title: Niu, Max
 categories: 
-  - ???
+  - Lab helper
 description: "???"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/max.png
