--- a/syllabus/ta/pham.qmd
+++ b/syllabus/ta/pham.qmd
@@ -1,7 +1,7 @@
 ---
 title: Patrick, Pham
 categories: 
-  - ???
+  - Lab leader
 description: "???"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/pham.jpg
