--- a/syllabus/ta/roberts.qmd
+++ b/syllabus/ta/roberts.qmd
@@ -1,7 +1,7 @@
 ---
 title: Roberts, Kenna
 categories: 
-  - ???
+  - Lab leader
 description: "???"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/kenna.jpg
