--- a/syllabus/ta/zhang_lisa.qmd
+++ b/syllabus/ta/zhang_lisa.qmd
@@ -1,7 +1,7 @@
 ---
 title: Zhang, Lisa
 categories: 
-  - ???
+  - Lab helper
 description: "???"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/lisa.png
