--- a/syllabus/ta/zhang_edward.qmd
+++ b/syllabus/ta/zhang_edward.qmd
@@ -2,7 +2,7 @@
 title: Zhang, Edward
 categories: 
   - Lab helper
-description: "???"
+description: "Th 11:45AM - 1:00PM (Sec 5)"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/ed.jpg
 image-alt: Headshot of TA
