--- a/syllabus/ta/bolik.qmd
+++ b/syllabus/ta/bolik.qmd
@@ -2,7 +2,7 @@
 title: Bolik, Jannis
 categories: 
   - Lab leader
-description: "???"
+description: "Th 3:05PM - 4:20PM (Sec 9)"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/bolik.jpg
 image-alt: Headshot of TA
