--- a/syllabus/ta/gao.qmd
+++ b/syllabus/ta/gao.qmd
@@ -2,7 +2,7 @@
 title: Gao, Oliver
 categories: 
   - Lab helper
-description: "???"
+description: "Th 1:25PM - 2:40PM (Sec 6)"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/gao.jpeg
 image-alt: Headshot of TA
