--- a/syllabus/ta/khudaverdiyeva.qmd
+++ b/syllabus/ta/khudaverdiyeva.qmd
@@ -2,7 +2,7 @@
 title: Khudaverdiyeva, Abuzar
 categories: 
   - Lab leader
-description: "???"
+description: "Th 8:30AM - 9:45AM (Sec 1)"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/abuzar.png
 image-alt: Headshot of TA
