--- a/syllabus/ta/nguyen.qmd
+++ b/syllabus/ta/nguyen.qmd
@@ -2,7 +2,7 @@
 title: Nguyen, Chelsea
 categories: 
   - Lab helper
-description: "???"
+description: "Th 8:30AM - 9:45AM (Sec 1)"
 subtitle: "[🔗](https://www.nytimes.com)"
 image: headshots/nguyen.jpeg
 image-alt: Headshot of TA
