--- a/syllabus/syllabus-materials.qmd
+++ b/syllabus/syllabus-materials.qmd
@@ -11,14 +11,15 @@ All books are **freely available online**:
 
 ## Technology
 
-You will need to bring a laptop to all lectures and labs. Options for obtaining a laptop through the university are described [here](https://sta199-s25.github.io/syllabus/syllabus_resources.html#course-costs). Armed with your trusty laptop, you must be able to access the following:
+You will need to bring a laptop to all lectures and labs. Options for obtaining a laptop through the university are described [here](https://sta199-s26.github.io/syllabus/syllabus-resources.html#course-costs). Armed with your trusty laptop, you must be able to access the following:
 
--   [This course page](https://sta199-s25.github.io/) that you are on right now;
+-   [This course page](https://sta199-s26.github.io/) that you are on right now;
 -   `R`/`RStudio` as provided by the [Duke Container Manager](https://cmgr.oit.duke.edu/containers);
 -   [Canvas](https://go.canvas.duke.edu/), through which you can access...
-    -   [Gradescope](https://www.gradescope.com/courses/935402);
-    -   [Ed Discussion](https://edstem.org/us/courses/70595/discussion);
--   [Panopto](https://duke.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=74a0ba52-f70b-4868-8324-b260017e1689) (for the lecture recordings);
+    -   Gradescope;
+    -   [Ed Discussion](https://edstem.org/us/courses/90224/discussion);
+-   [GitHub](https://github.com/sta199-s26);
+-   [Panopto](https://duke.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=7301f69f-7a4a-459f-b8b4-b3ca00ee0a71) (for the lecture recordings);
 -   [Zoom](https://duke.zoom.us/) (e.g. for remote office hours).
 
 If access to technology becomes a concern for you during the semester, contact the instructor immediately to discuss options.
